--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,38 +1,94 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+  background-color: rgb(30, 30, 30);
+}
+div {
+  display: inline;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.movie-wrap {
+  margin: 0 auto;
+  width: 80%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  justify-content: space-between;
+  padding: 30px;
+  color: aliceblue;
+  gap: 30px;
+}
+.movies {
+  width: 230px;
+}
+img {
+  width: 100%;
+  transition: all 0.6s;
+}
+img:hover {
+  transform: scale(1.1, 1.1);
+}
+ul {
+  margin-left: 20px;
+}
+h1 {
+  font-size: 2rem;
+  color: aliceblue;
+  margin: 10px 0;
+  margin-left: 30px;
+}
+h2 {
+  font-size: 1.5rem;
+  color: aliceblue;
+  margin: 10px 0;
+}
+p {
+  margin: 10px 0;
+}
+header {
+  background-color: rgb(160, 27, 27);
+  padding: 10px;
+  margin-top: 50px;
+  margin-right: 10%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.home-link {
+  text-decoration: none;
+  color: aliceblue;
+}
+/* ------------------modal */
+
+.modal-wrap {
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.761);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.modal-box {
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0 auto;
+  display: flex;
+  width: 70%;
+  height: 100%;
+  margin-top: 5%;
 }
-
-.App-link {
-  color: #61dafb;
+.modal-poster {
+  width: 50%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.modal-contant {
+  width: 100%;
+}
+.modal-summary {
+  margin-left: 30px;
+  color: aliceblue;
+}
+.modal-img:hover {
+  transform: none;
+}
+.link {
+  color: aliceblue;
+  float: right;
+  font-size: 1.2rem;
 }
