--- a/app/src/App.css
+++ b/app/src/App.css
@@ -25,6 +25,7 @@ div {
 img {
   width: 100%;
   transition: all 0.6s;
+  box-shadow: 1px 1px 12px 0px rgba(255, 255, 255, 0.955);
 }
 img:hover {
   transform: scale(1.1, 1.1);
